# NeuroFace-AI

./: README.md  claude.md  main.py  pyproject.toml
outputs/: embeddings_database.pkl
src/config/: settings.py
src/data/: dataset_loader.py  pair_generator.py
src/models/: contrastive_loss.py  siamese_network.py
src/recognition/: embedding_database.py  recognizer.py  webcam.py
src/training/: evaluate.py  train.py
src/utils/: image_utils.py  visualization.py
