[project]
name = "facerecognitionsiamese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "scikit-learn>=1.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.68.4",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
